<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosserial2</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="github@gagolino.com">gaetan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>

  <depend>std_msgs</depend>
  <depend>diagnostics</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
